--- a/_config.yml
+++ b/_config.yml
@@ -1,33 +1,27 @@
+# Dependencies
+markdown:         redcarpet
+pygments:         true
+
 # Permalinks
-#
-# Use of `relative_permalinks` ensures post links from the index work properly.
-permalink:           pretty
-relative_permalinks: true
+permalink:        pretty
 
 # Setup
-title:               uberpixel
-tagline:             web presence of Chris Brabez
-url:                 http://christianbrabez.com
-paginate:            1
-baseurl:             ""
+title:            Christian Brabez
+tagline:          'The personal website of Christian Brabez'
+description:      'The personal website of Christian Brabez'
+url:              joshualande.com
 
-# Assets
-#
-# We specify the directory for Jekyll so we can use @imports.
-sass:
-  sass_dir:          _sass
-  style:            :compressed
-
-# About/contact
 author:
-  name:              Christian Brabez
-  url:               https://twitter.com/cbrabez
-  email:             christian.brabez@gmail.com
+  name:           'Christian Brabez'
+  url:            https://twitter.com/cbrabez
+
+paginate:         1
 
 # Custom vars
-version:             2.0.0
+version:          1.0.0
+
 github:
-  repo:              https://github.com/cbrabez/cbrabez.github.io
+  repo:           github.com/cbrabez/cbrabez.github.io
 
 # This is the list of pages to incldue in the header of the website.
 pages_list:       {'About':'/about','Archive':'/archive','Feed':'/atom.xml'}
