--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ permalink:        pretty
 title:            Christian Brabez
 tagline:          'The personal website of Christian Brabez'
 description:      'The personal website of Christian Brabez'
-url:              joshualande.com
+url:              christianbrabez.com
 
 author:
   name:           'Christian Brabez'
